minishift/consul/cluster-with-Token/consul-StatefulSet.yml
---
apiVersion: v1
kind: Service
metadata:
  name: consul
  labels:
    name: consul
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8500
      targetPort: 8500
    - name: https
      port: 8443
      targetPort: 8443
    - name: rpc
      port: 8400
      targetPort: 8400
    - name: serflan-tcp
      protocol: "TCP"
      port: 8301
      targetPort: 8301
    - name: serflan-udp
      protocol: "UDP"
      port: 8301
      targetPort: 8301
    - name: serfwan-tcp
      protocol: "TCP"
      port: 8302
      targetPort: 8302
    - name: serfwan-udp
      protocol: "UDP"
      port: 8302
      targetPort: 8302
    - name: server
      port: 8300
      targetPort: 8300
    - name: consuldns
      port: 8600
      targetPort: 8600
  selector:
    app: consul

---

kind: StatefulSet
apiVersion: apps/v1beta1
metadata:
  name: consul
spec:
  serviceName: consul
  replicas: 3
  template:
    metadata:
      labels:
        app: consul
    spec:
#      serviceAccountName: consul-serviceaccount
#      affinity:
#        podAntiAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            - labelSelector:
#                matchExpressions:
#                  - key: app
#                    operator: In
#                    values:
#                      - consul
#              topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 10
      securityContext:
        fsGroup: 1000
      containers:
      - name: consul
        image: consul:1.0.2
        ports:
            - containerPort: 8300
              name: server
            - containerPort: 8301
              name: serflan-tcp
              protocol: "TCP"
            - containerPort: 8301
              name: serflan-udp
              protocol: "UDP"
            - containerPort: 8302
              name: serfwan-tcp
              protocol: "TCP"
            - containerPort: 8302
              name: serfwan-udp
              protocol: "UDP"
            - containerPort: 8400
              name: rpc-port
            - containerPort: 8500
              name: api-port
            - containerPort: 8600
              name: consuldns-tcp
              protocol: "TCP"
            - containerPort: 8600
              name: consuldns-udp
              protocol: "UDP"
        resources:
          limits:
            cpu: "100m"
        # https://github.com/kelseyhightower/consul-on-kubernetes/issues/23
        args:
                - "consul"
                - "agent"
                - "-advertise=$(POD_IP)"
                - "-bind=0.0.0.0"
                - "-bootstrap-expect=3"
                - "-retry-join=consul-0.consul.glt-consul.svc.cluster.local"
                - "-retry-join=consul-1.consul.glt-consul.svc.cluster.local"
                - "-retry-join=consul-2.consul.glt-consul.svc.cluster.local"
                - "-client=0.0.0.0"
                - "-domain=cluster.local"
                - "-config-file=/consul/config/server.json"
                - "-data-dir=/consul/data"
                - "-server"
                - "-rejoin"
                - "-ui"
                - "-disable-host-node-id"
        volumeMounts:
          - name: config
            mountPath: /consul/config/
        lifecycle:
          preStop:
            exec:
              command:
                - /bin/sh
                - -c
                - consul leave
      volumes:
        - name: config
          secret:
            secretName: consul
