minishift/consul/cluster-with-Token/consul-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: consul-sr
  labels:
    app: consul-sr
spec:
  type: LoadBalancer
  ports:
  - port: 8500
    name: consul
    targetPort: 8500
    nodePort: 30001
  selector:
    app: consul
